--- a/index.html
+++ b/index.html
@@ -93,11 +93,16 @@
 	<ul>
 		<li> <i class="fab fa-gratipay"></i> </li>
 		<li> <i class="fas fa-share-alt-square"></i> </li>
-		<li> <i class="far fa-comment"> Comentar en twitter </i> </li>
+		<li> <i class="far fa-comment"></i> </li>
 	</ul>
 </div>
 
-<p class="contenedor__usercircle"><i class="fas fa-user-circle"></i> </p>
+ <i class="fas fa-user-circle"></i>
+
+
+<hr class="blog_linea">
+
+<span> <img  class="responsive-image" src=" assets/img/user.png"></span>
 
 <!-- la parte de naomi-->
 <div class="row">
@@ -119,6 +124,15 @@
   Ut enim ad minim veniam,
   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
   consequat.</div>
+</div>
+
+<div class="container"> 
+	<div class="row">
+  <div class="col-md-6">  <i class="far fa-play-circle"></i>Los mejores cortes del 2018</div>
+  <div class="col-md-6"> ¿Cómo cuidar tu barba en invierno? <i class="far fa-play-circle"></i></div>
+</div>
+	
+
 </div>
 
 
